--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
